# simon.aksw.org

./: .copier-answers.env  .copier-answers.yml  .gitignore  CHANGELOG.md  README.md  TaskfileCustom.yaml  logconf.yaml  pyproject.toml
.github/workflows/: check.yml  publish.yml
docker/: .gitignore  Dockerfile
docker/scripts/: entrypoint.sh  provisioning.sh
simon_aksw_org/: __init__.py  app.py  messages.py  recaptcha.py  settings.py
simon_aksw_org/routers/: favicon.py  home.py
simon_aksw_org/static/: style.css
simon_aksw_org/templates/: base.html  home.html
tests/: conftest.py  test_basics.py
